--- a/match.html
+++ b/match.html
@@ -23,7 +23,7 @@
          <div id="banner__wrapper">
             <div id="banner__group">
                <h1 class="title">The Greatest show on the earth</h1>
-               <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+               <p>FIFA World Cup Qatar 2022™FIFA World Cup Qatar 2022™. The official home for the world's most prestigious event</p>
                <button class="cta-btn">Watch Live<i class="fa-solid fa-chevron-right"></i></button>
             </div>
          </div>
