--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <div id="banner__wrapper">
             <div id="banner__group">
                <h1 class="title">The Greatest show on the earth</h1>
-               <pFIFA World Cup Qatar 2022™FIFA World Cup Qatar 2022™. The official home for the world's most prestigious event</p>
+               <p>FIFA World Cup Qatar 2022™FIFA World Cup Qatar 2022™. The official home for the world's most prestigious event</p>
                <button class="cta-btn">Watch Live<i class="fa-solid fa-chevron-right"></i></button>
             </div>
          </div>
